Publish a thin library jar; TornadoVM comes from the SDK
The published jar was the maven-shade fat jar, which bundled tornado-api,
tornado-runtime and their dependencies (org.graalvm collections/word,
truffle-compiler, log4j, JMH, jopt-simple, commons-math3, snmp4j, ASM). In
Quarkus the bundled TornadoVM classes load in the RunnerClassLoader while
tornado.graal comes from the SDK's module path, and the first request fails
with a loader constraint violation on UnmodifiableEconomicMap.

tornado-api and tornado-runtime are now provided, like tornado-cublas and
tornado-cudnn: the SDK supplies them, and all of the bundled libraries were
their transitive dependencies, which the SDK also ships. With nothing left
to bundle, the shade plugin goes and maven-jar-plugin carries the manifest
(Main-Class, Automatic-Module-Name). The launchers already start the JVM
from the SDK argfile, so they run the thin jar unchanged.

Guards: an enforcer rule (ban-runtime-dependencies) fails the build on any
compile- or runtime-scope dependency, and scripts/check_library_jar.py
asserts the jar holds only org/beehive/jitllm and the project's META-INF
files. CI runs it on the built jar, and the Central deploy runs it before
publishing.

Fixes #176